fix: reduce h1 spacing on tablet and desktop

--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -79,10 +79,9 @@ body {
   font-size: 1.06rem;
   font-weight: 700;
   color: var(--dark-text);
-  line-height: 1.1;
   max-width: 32ch;
   margin-top: 0;
-  margin-bottom: 0.3rem;
+  margin-bottom: 0rem;
 }
 
 .hero-text p {
@@ -146,6 +145,7 @@ body {
     margin-top: 1rem;
     margin-bottom: 0.3rem;
     font-size: 1.06rem;
+    line-height: 1.1;
   }
 
   .hero-text p {
@@ -294,8 +294,9 @@ body {
   }
 
   .hero-text h1 {
-    margin-top: 0;
-    margin-bottom: 0.5rem;
+    font-size: 1.47rem;
+    line-height: 0.6;
+    margin-bottom: 0;
   }
 
   .hero-text p {
@@ -347,8 +348,8 @@ body {
 
   .hero-text h1 {
     font-size: 1.47rem;
-    margin-top: 0;
-    margin-bottom: 0.5rem;
+    line-height: 0.6;
+    margin-bottom: 0;
   }
 
   .hero-text p {
@@ -399,8 +400,8 @@ body {
 
   .hero-text h1 {
     font-size: 1.47rem;
-    margin-top: 0;
-    margin-bottom: 0.5rem;
+    line-height: 0.6;
+    margin-bottom: 0rem;
   }
 
   .hero-text p {
@@ -413,7 +414,6 @@ body {
     padding: 0.5rem 5rem; 
   }
 }
-
 
 @media (min-width: 769px) {
   .hero {
@@ -441,7 +441,8 @@ body {
 
   .hero-text h1 {
     font-size: 1.6rem;
-    margin-bottom: 0.6rem;
+    margin-bottom: 0;
+    line-height: 0.6;
   }
 
   .hero-text p {
